# dolphins

./: .gitignore  README.md  pyproject.toml  requirements.txt  requirements_dev.txt
.github/workflows/: python-app.yml
Flora/: Transfer_Learning_pytorch_turial_wanb_all_metrics_ResNet18.py  creating_npy_files_spectro.ipynb  creating_npy_files_stack_spectro.ipynb  organizing_chunks.py
data/: .gitignore
data/audios/: .gitignore
src/: Transfer_Learning_Data_Loader_Flora_Linux.py
src/dolphins/: __main__.py  audio_processing.py  config.py  controller.py  controllers.py  data_split.py  image_generation.py  image_processing.py  model_data_loader.py  targets.py  undersampling.py  utils.py
src/dolphins/sql/: chunk_contains_entire_call.sql  chunk_contains_percentage_call.sql
tests/: test_audio_processing.py  test_data_split.py  test_targets.py
tests/fixtures/join_target/chunk_contains_percentage_call/: audio_metadata.csv  expected.csv  labels.csv
