[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dolphins"
version = "0.0.0"
description = "Dolphins for Flora's 🌺 master thesis"
readme = "README.md"
authors = [{ name = "Pedro Igor", email = "pedroigorao@hotmail.com" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["dolphins", "audio", "detection"]

dependencies = [
    "scipy >= 1.12.0",
]
requires-python = ">=3.11"

[project.optional-dependencies]
dev = [
    "pytest >= 8.0.1",
    "ipykernel",
    "black >= 24.0.0",
    "pip-tools",
]

[project.urls]
Homepage = "https://github.com/pedroig/dolphins"

[project.scripts]
realpython = "dolphins.__main__:main"
