[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dolphins"
version = "0.0.0"
description = "Dolphins for Flora's 🌺 master thesis"
readme = "README.md"
authors = [{ name = "Pedro Igor", email = "pedroigorao@hotmail.com" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["dolphins", "audio", "detection"]

dependencies = [
    "scipy >= 1.12.0, < 2",
    "datasets[audio] >= 2.17.1, < 3",
    "pandas >= 2.2.1, < 3",
    "duckdb >= 0.10.1, < 1",
]
requires-python = ">=3.11"

[project.optional-dependencies]
dev = [
    "pytest >= 8.0.1, < 9",
    "ipykernel",
    "ruff",
    "pip-tools",
]

[project.urls]
Homepage = "https://github.com/pedroig/dolphins"

[project.scripts]
realpython = "dolphins.__main__:main"
