[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dolphins"
version = "0.0.0"
description = "Dolphins for Flora's 🌺 master thesis"
readme = "README.md"
authors = [{ name = "Pedro Igor", email = "pedroigorao@hotmail.com" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["dolphins", "audio", "detection"]

dependencies = [
    "click >= 8.1.7, < 9",
    "duckdb >= 0.10.1, < 1",
    "librosa >= 0.10.2, < 1",
    "llvmlite >= 0.43.0, < 1",
    "matplotlib >= 3.9.2, < 4",
    "npy-append-array >= 0.9.16, < 1",
    "pandas >= 2.2.1, < 3",
    "pyarrow >= 18.1.0, < 19",
    "scipy >= 1.12.0, < 2",
    "torch >= 2.5.1, < 3",
    "torchvision >= 0.20.1, < 1",
    "tqdm >= 4.67.1, < 5",
]
requires-python = ">=3.11"

[project.optional-dependencies]
dev = [
    "ipykernel",
    "pip-tools",
    "pytest >= 8.0.1, < 9",
    "ruff",
]

[project.urls]
Homepage = "https://github.com/pedroig/dolphins"

[project.scripts]
realpython = "dolphins.__main__:main"
